--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,13 @@ button {
 	border: 0;
 	text-transform: uppercase;
 	height: 2.7rem;
-	width: 17rem;
+	width: 7rem;
 	cursor: pointer;
 	background: lightblue;
+}
+
+#btn-esq {
+	font-size: 11;
 }
 
 .form-login .mensagem {
@@ -75,4 +79,9 @@ button {
 a {
 	color: black;
 	text-decoration: none;
+}
+
+#resetSenha{
+	margin-top: 10px;
+	font-size: 13;
 }
